# intelligent-competition

./: .gitignore  change_IP.py  readme.md  settings.json  settings_CSI.json
32s_220115node_pkg/: CMakeLists.txt  package.xml
32s_220115node_pkg/shell/: 1-attack_speed.sh  2-statistic_UAV.sh
_ShootBall/: Config.json  client_ue4.py  client_ue4_SITL.bat
analyse/: plot_multiple_file.py
csi_cam/: CMakeLists.txt
csi_cam/launch/: main.launch
csi_cam/script/: img_pub.py  test.py
csi_cam/src/: csi_cam.cpp
d435_cam/: CMakeLists.txt  README.md  package.xml
d435_cam/launch/: main.launch
d435_cam/src/: d435_cam.cpp
datas/: CEP_raw.pkl  CEP_with_ekf.pkl  CEP_with_rate.pkl
ekf_pkg/: CMakeLists.txt  README.md  package.xml
ekf_pkg/launch/: img_ekf.launch
ekf_pkg/src/: a.out  eskf.cpp  eskf.h  img_imu_ekf.cpp  img_imu_ekf.h  img_imu_ekf_node.cpp  math_utils.cpp  math_utils.h  sensor_config.h  test.cpp  version_0429.cpp
jr_identify/: CMakeLists.txt  package.xml
jr_identify/src/: calibrator.cpp  get_img_ros.cpp  get_img_ros_only_yolo.cpp  get_img_ros_with_red.cpp  preprocess.cu  yololayer.h
offboard_pkg/: CMakeLists.txt  package.xml
offboard_pkg/launch/: bs_d435i_30hz.launch  bs_t265_bridge.launch  obs.launch  obs_acc.launch  obs_acc12.launch  obs_acc2.launch  obs_acc22.launch  obs_acc3.launch  obs_acc4.launch  obs_high.launch
offboard_pkg/script/: R_Client.py  assemble_cmd.py  avoidance_test.py  calcCEP.py  obs.py  obs12.py  obs2.py  obs22.py  obs3.py  obs4.py  obs_avoidance.py  obs_ekf_statistic.py  obs_high.py  obs_statistic.py  utils_obs.py
offboard_pkg/shell/: 1-all_high_startup.sh  12-all_high_startup.sh  2-all_high_startup.sh  22-all_high_startup.sh  3-all_high_startup.sh  4-all_high_startup.sh  all.sh  all_265_435_startup.sh  all_acc.sh  all_high.sh  all_high_startup.sh  cleanLog.sh
p900_rt/union_ros_serial/: CMakeLists.txt  UART.yaml  package.xml
p900_rt/union_ros_serial/include/: uart.h
p900_rt/union_ros_serial/launch/: main.launch
p900_rt/union_ros_serial/msg/: TrackRectangle.msg
p900_rt/union_ros_serial/src/: main.cpp  uart.cpp
p900_rt/unionsys_msgs/: CMakeLists.txt  package.xml
p900_rt/unionsys_msgs/msg/: Gimbal_PidVel_cmd.msg  TrackRectangle.msg
paper_plot/: 1-draw_trajectory.py  10-plot_data.py  11-plot_data.py  12-plot_data.py  13-plot_data.py  14-plot_data.py  2-CEP_with_ekf.py  3-CEP_with_rate.py  4-scatter_with_rate.py  5-scatter_with_ekf.py  6-plot_data.py  7-plot_data.py  8-plot_data.py  9-plot_data.py  Matplotlib 优雅作图笔记 - 可乐学人.ipynb  params.json  plot_tools.py
rflysim_ros_pkg/launch/: camera.launch  multi_mavros.launch  obj.launch
rflysim_ros_pkg/script/: Rflysim_obj.py  Rflysim_objwithsize.py
rflysim_udp_picture_rec_topic_pub_rospkg/launch/: depth_newprotocol_cpp.launch  depth_newprotocol_py.launch  depth_py.launch  gray_newprotocol_py.launch  gray_py.launch  gray_stereo_newprotocol_py.launch  gray_stereo_py.launch  rgb_gray_depth_imu_py.launch  rgb_newprotocol_cpp.launch  rgb_newprotocol_py.launch  rgb_py.launch
rflysim_udp_picture_rec_topic_pub_rospkg/src/: image_receive.py  image_receive_newprotocol.py  imu_receive.py
simulation/launch/: rflysim_sphere.launch  sim_rfly.launch  sim_rfly2.launch  sim_rfly3.launch  sim_rfly_ekf_statistic.launch  sim_rfly_high.launch  sim_rfly_statistic.launch
simulation/script/: fake_pub.py  img_pub.py
simulation/shell/: 1-rfly-sitl.sh  2-rfly-sitl.sh  3-rfly-sitl.sh  cleanLog.sh  rfly-hitl.sh  rfly-sitl-high.sh  rfly-sitl.sh  rfly-sitl_ekf_statistic.sh  rfly-sitl_statistic.sh
simulation/statistics/: CEP_with_ekf.py  CEP_with_rate.py  calcCEP.py  draw_trajectory.py  parse_datas.py  scatter_with_ekf.py  scatter_with_rate.py
swarm_msgs/: CMakeLists.txt
tracker_pkg/: CMakeLists.txt
tracker_pkg/script/: test_CSI.py
tracker_pkg/src/: color_track.cpp
