<?xml version="1.0"?>
<package>
  <name>unionsys_msgs</name>
  <version>0.0.0</version>
  <description>The UnionSys unionsys_msgs package</description>
  <maintainer email="1548791037@qq.com">Wang Yan</maintainer>
  <license>UnionSys</license>
  <url type="website">http://www.UnionSys.com</url>
  <author email="1548791037@qq.com">Wang Yan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
